--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@jamescoyle/vue-icon": "^0.1.2",
@@ -22,7 +23,9 @@
     "@tailwindcss/forms": "^0.5.4",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
+    "jest": "^29.6.2",
     "postcss": "^8.4.26",
+    "supertest": "^6.3.3",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.0"
   }
