--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        node: [18]
+        node: [18, 14, 16]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -17,7 +17,5 @@ jobs:
         run: npm install
       - name: Run jest tests
         run: npm test
-      - name: Install modules
-        run: npm install
       - name: Build project
         run: npm run build
