--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.4",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.46.0",
     "jest": "^29.6.2",
     "postcss": "^8.4.26",
     "supertest": "^6.3.3",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.0"
   }
 }
