--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "@jamescoyle/vue-icon": "^0.1.2",
@@ -24,8 +26,11 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-vue": "^9.16.1",
     "jest": "^29.6.2",
     "postcss": "^8.4.26",
+    "prettier": "3.0.1",
     "supertest": "^6.3.3",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.0"
